--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css"/>
-  <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-  <title>Tours for the Perplexed</title>
+  <link rel="shortcut icon" type="image/png" href="images/travel.png"/>
+  <title>Travel for the Perplexed</title>
 </head>
 <body>
-  <header class="header"></header>
-  
+  <header class="header">
+    <div class="logo-container">
+      <img src="images/travel.png"
+      alt="Tours for the Perplexed Logo"
+      class="logo"/>
+    </div>
+    <div class="header-text-container">
+      <h1 class="mainHeading">
+        <span class="main-heading-large">
+            Tours
+        </span>
+        <span class="main-heading-sub">
+            For the Perplexed
+        </span>
+      </h1>
+    </div>
+  </header>
+
 </body>
 </html>
