with animated button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             For the Perplexed
         </span>
       </h1>
+      <a href="#" class="button white-button button-animated">Learn through travel</a>
     </div>
   </header>
 
