converted to BEM

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 </head>
 <body>
   <header class="header">
-    <div class="logo-container">
+    <div class="header__logo-container">
       <img src="images/travel.png"
       alt="Tours for the Perplexed Logo"
-      class="logo"/>
+      class="header__logo"/>
     </div>
-    <div class="header-text-container">
-      <h1 class="mainHeading">
-        <span class="main-heading-large">
+    <div class="header__text-container">
+      <h1 class="main-heading">
+        <span class="main-heading--large">
             Tours
         </span>
-        <span class="main-heading-sub">
+        <span class="main-heading--sub">
             For the Perplexed
         </span>
       </h1>
-      <a href="#" class="button white-button button-animated">Learn through travel</a>
+      <a href="#" class="button button--white button--animated">Learn through travel</a>
     </div>
   </header>
 
