--- a/index.html
+++ b/index.html
@@ -29,15 +29,42 @@
     </div>
   </header>
 
-  <section class="test-grid">
-    <div class="row">
-      <div class="col-1-of-2">
-        Col 1 of 2
+  <main>
+    <section class="about-section">
+      <div class="u-centre-text u-margin-bottom-8">
+        <h2 class="secondary-heading">
+          Travel and learn at the same time
+        </h2>
       </div>
-      <div class="col-1-of-2">
-        Col 1 of 2
+
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="tertiary-heading">
+            Gain a deeper understanding of a new environment
+            <p class="para">
+              Make the most of travelling by engaging with local culture and
+              widen your horizons by trying a new skill, or honing a hobby in a
+              place where it's a passion.
+            </p>
+          </h3>
+          <h3 class="tertiary-heading">
+            Dance to the city's own beat, eat and cook like a local, make music and art inspired by a past and present around you.
+            <p class="para">
+              Party in the Salsa world capital?
+              Brew the finest coffee from the best local beans?
+              Run in the hills alongside barefoot competition?
+              Drum the rhythms that 
+            </p>
+          </h3>
+        </div>
+        <div class="col-1-of-2">
+          Images will go here
+        </div>
       </div>
-    </div>
+    </section>
+  </main>
+
+  <!-- <section class="test-grid">
 
     <div class="row">
       <div class="col-1-of-3">
@@ -96,7 +123,7 @@
       </div>
     </div>
 
-  </section>
+  </section> -->
 
 </body>
 </html>
