more of the about section complete

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <main>
     <section class="about-section">
-      <div class="u-centre-text u-margin-bottom-8">
+      <div class="u-centre-text u-margin-bottom-large">
         <h2 class="secondary-heading">
           Travel and learn at the same time
         </h2>
@@ -39,23 +39,31 @@
 
       <div class="row">
         <div class="col-1-of-2">
-          <h3 class="tertiary-heading">
+          <h3 class="tertiary-heading u-margin-bottom-small">
+            Learn to make music, art, food and party like a local
+          </h3>
+              <ul class="para">
+                <li>Dance to the city's own beat in the Salsa world capital</li>
+                <li>Brew the finest coffee from the best local beans</li>
+                <li>Run in the hills alongside barefoot competition</li>
+                <li>Immerse yourself in the culture and language</li>
+              </ul>
+          <h3 class="tertiary-heading u-margin-bottom-small">
             Gain a deeper understanding of a new environment
+          </h3>
             <p class="para">
               Make the most of travelling by engaging with local culture and
               widen your horizons by trying a new skill, or honing a hobby in a
               place where it's a passion.
             </p>
-          </h3>
-          <h3 class="tertiary-heading">
-            Dance to the city's own beat, eat and cook like a local, make music and art inspired by a past and present around you.
             <p class="para">
-              Party in the Salsa world capital?
-              Brew the finest coffee from the best local beans?
-              Run in the hills alongside barefoot competition?
-              Drum the rhythms that 
+              A vision of responsible, sustainable tourism that builds
+              bridges through cultural exposure and exchange.
             </p>
-          </h3>
+
+            <a href="#" class="text-button">
+              Find out more &rarr;
+            </a>
         </div>
         <div class="col-1-of-2">
           Images will go here
