completed about section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
             </a>
         </div>
         <div class="col-1-of-2">
-          Images will go here
+          <div class="composition">
+            <img src="images/coffee-brewing.jpg" alt="Coffee brewer in the coffee triangle" class="composition__photo composition__photo--p1">
+            <img src="images/rift-valley-run.jpeg" alt="Running in the Rift Valley" class="composition__photo composition__photo--p2">
+            <img src="images/calisalsa.jpeg" alt="Salsa dancers in Cali" class="composition__photo composition__photo--p3">
+          </div>
         </div>
       </div>
     </section>
