--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/basic-icon-styles.css"/>
+  <link rel="stylesheet" href="css/music-icon-styles.css"/>
+    <link rel="stylesheet" href="css/software-icon-styles.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="shortcut icon" type="image/png" href="images/travel.png"/>
   <title>Travel for the Perplexed</title>
