--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/basic-icon-styles.css"/>
   <link rel="stylesheet" href="css/music-icon-styles.css"/>
-    <link rel="stylesheet" href="css/software-icon-styles.css"/>
+  <link rel="stylesheet" href="css/software-icon-styles.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="shortcut icon" type="image/png" href="images/travel.png"/>
   <title>Travel for the Perplexed</title>
@@ -77,6 +77,113 @@
         </div>
       </div>
     </section>
+
+    <section class="theme-section">
+
+        <div class="row">
+
+          <div class="col-1-of-6">
+            <div class="theme-box">
+                <i class="theme-box__icon icon-basic-world"></i>
+                <h3 class="tertiary-heading u-margin-bottom-small">Music</h3>
+                <p class="theme-box__text">
+                  Learn to play an instrument
+                </p>
+                <p class="theme-box__text">
+                  Take a songwriting retreat
+                </p>
+                <p class="theme-box__text">
+                  Immerse yourself in a genre in its hometown
+                </p>
+            </div>
+          </div>
+
+
+          <div class="col-1-of-6">
+            <div class="theme-box">
+                <i class="theme-box__icon icon-basic-world"></i>
+                <h3 class="tertiary-heading u-margin-bottom-small">Art & Literature</h3>
+                <p class="theme-box__text">
+                  Discover design, calligraphy, geometry and local handicraft
+                </p>
+                <p class="theme-box__text">
+                  Be inspired to write where estimated authors went before you
+                </p>
+                <p class="theme-box__text">
+                  Say yes to comedy, improv and theatre where its part of tradition
+                </p>
+            </div>
+          </div>
+
+
+          <div class="col-1-of-6">
+            <div class="theme-box">
+                <i class="theme-box__icon icon-basic-world"></i>
+                <h3 class="tertiary-heading u-margin-bottom-small">Sport and Martial Arts</h3>
+                <p class="theme-box__text">
+                  Run through the hills where everyone does
+                </p>
+                <p class="theme-box__text">
+                  Level up in judo, taekwondo, capoeira, or krav maga
+                </p>
+                <p class="theme-box__text">
+                  Go higher, faster and further where the very best got started
+                </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-6">
+            <div class="theme-box">
+                <i class="theme-box__icon icon-basic-world"></i>
+                <h3 class="tertiary-heading u-margin-bottom-small">Dance</h3>
+                <p class="theme-box__text">
+                  Embrace authentic Latin rhythms where they are best known
+                </p>
+                <p class="theme-box__text">
+                  Celebrate with Carribbean or West African joie-de-vivre
+                </p>
+                <p class="theme-box__text">
+                  Tell stories through the art of classical Indian dance
+                </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-6">
+            <div class="theme-box">
+                <i class="theme-box__icon icon-basic-world"></i>
+                <h3 class="tertiary-heading u-margin-bottom-small">Food and Drink</h3>
+                <p class="theme-box__text">
+                  Indulge your sweet tooth and make Europe's finest desserts
+                </p>
+                <p class="theme-box__text">
+                  Brew beer or coffee just how you like it
+                </p>
+                <p class="theme-box__text">
+                  Become expert in the food-loving cultures
+                </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-6">
+            <div class="theme-box">
+                <i class="theme-box__icon icon-basic-world"></i>
+                <h3 class="tertiary-heading u-margin-bottom-small">Languages</h3>
+                <p class="theme-box__text">
+                  Try a new language in a major capital
+                </p>
+                <p class="theme-box__text">
+                  Refresh your language skills in cities that love learning
+                </p>
+                <p class="theme-box__text">
+                  Tackle a computer language in the heart of Silicon Valley
+                </p>
+            </div>
+          </div>
+
+        </div>
+
+    </section>
+
   </main>
 
   <!-- <section class="test-grid">
