--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                 <i class="theme-box__icon icon-basic-world"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Music</h3>
                 <p class="theme-box__text">
-                  Learn to play an instrument
+                  Play an instrument
                 </p>
                 <p class="theme-box__text">
-                  Take a songwriting retreat
+                  Write songs
                 </p>
                 <p class="theme-box__text">
-                  Immerse yourself in a genre in its hometown
+                  Immerse in a genre
                 </p>
             </div>
           </div>
@@ -104,13 +104,13 @@
                 <i class="theme-box__icon icon-basic-world"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Art & Literature</h3>
                 <p class="theme-box__text">
-                  Discover design, calligraphy, geometry and local handicraft
+                  Discover local art
                 </p>
                 <p class="theme-box__text">
-                  Be inspired to write where estimated authors went before you
+                  Be inspired to write
                 </p>
                 <p class="theme-box__text">
-                  Say yes to comedy, improv and theatre where its part of tradition
+                  Say yes to improv
                 </p>
             </div>
           </div>
@@ -119,15 +119,15 @@
           <div class="col-1-of-6">
             <div class="theme-box">
                 <i class="theme-box__icon icon-basic-world"></i>
-                <h3 class="tertiary-heading u-margin-bottom-small">Sport and Martial Arts</h3>
+                <h3 class="tertiary-heading u-margin-bottom-small">Sport</h3>
                 <p class="theme-box__text">
-                  Run through the hills where everyone does
+                  Run in a pack
                 </p>
                 <p class="theme-box__text">
-                  Level up in judo, taekwondo, capoeira, or krav maga
+                  Level up in a martial art
                 </p>
                 <p class="theme-box__text">
-                  Go higher, faster and further where the very best got started
+                  Go faster and further
                 </p>
             </div>
           </div>
@@ -137,13 +137,13 @@
                 <i class="theme-box__icon icon-basic-world"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Dance</h3>
                 <p class="theme-box__text">
-                  Embrace authentic Latin rhythms where they are best known
+                  Learn rhythms
                 </p>
                 <p class="theme-box__text">
-                  Celebrate with Carribbean or West African joie-de-vivre
+                  Celebrate like a local
                 </p>
                 <p class="theme-box__text">
-                  Tell stories through the art of classical Indian dance
+                  Tell stories with dance
                 </p>
             </div>
           </div>
@@ -151,15 +151,14 @@
           <div class="col-1-of-6">
             <div class="theme-box">
                 <i class="theme-box__icon icon-basic-world"></i>
-                <h3 class="tertiary-heading u-margin-bottom-small">Food and Drink</h3>
+                <h3 class="tertiary-heading u-margin-bottom-small">Food & Drink</h3>
                 <p class="theme-box__text">
-                  Indulge your sweet tooth and make Europe's finest desserts
+                  Indulge a sweet tooth
+                <p class="theme-box__text">
+                  Brew beer or coffee
                 </p>
                 <p class="theme-box__text">
-                  Brew beer or coffee just how you like it
-                </p>
-                <p class="theme-box__text">
-                  Become expert in the food-loving cultures
+                  Discover a cuisine
                 </p>
             </div>
           </div>
@@ -169,13 +168,13 @@
                 <i class="theme-box__icon icon-basic-world"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Languages</h3>
                 <p class="theme-box__text">
-                  Try a new language in a major capital
+                  Try a new language
                 </p>
                 <p class="theme-box__text">
-                  Refresh your language skills in cities that love learning
+                  Refresh your skills
                 </p>
                 <p class="theme-box__text">
-                  Tackle a computer language in the heart of Silicon Valley
+                  Code a programme
                 </p>
             </div>
           </div>
