--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/basic-icon-styles.css"/>
-  <link rel="stylesheet" href="css/music-icon-styles.css"/>
-  <link rel="stylesheet" href="css/software-icon-styles.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="shortcut icon" type="image/png" href="images/travel.png"/>
   <title>Travel for the Perplexed</title>
@@ -84,7 +82,7 @@
 
           <div class="col-1-of-6">
             <div class="theme-box">
-                <i class="theme-box__icon icon-basic-world"></i>
+                <i class="theme-box__icon icon-basic-headset"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Music</h3>
                 <p class="theme-box__text">
                   Play an instrument
@@ -101,7 +99,7 @@
 
           <div class="col-1-of-6">
             <div class="theme-box">
-                <i class="theme-box__icon icon-basic-world"></i>
+                <i class="theme-box__icon icon-basic-picture"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Art & Literature</h3>
                 <p class="theme-box__text">
                   Discover local art
@@ -118,7 +116,7 @@
 
           <div class="col-1-of-6">
             <div class="theme-box">
-                <i class="theme-box__icon icon-basic-world"></i>
+                <i class="theme-box__icon icon-basic-chronometer"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Sport</h3>
                 <p class="theme-box__text">
                   Run in a pack
@@ -134,7 +132,7 @@
 
           <div class="col-1-of-6">
             <div class="theme-box">
-                <i class="theme-box__icon icon-basic-world"></i>
+                <i class="theme-box__icon icon-basic-mixer2"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Dance</h3>
                 <p class="theme-box__text">
                   Learn rhythms
@@ -150,7 +148,7 @@
 
           <div class="col-1-of-6">
             <div class="theme-box">
-                <i class="theme-box__icon icon-basic-world"></i>
+                <i class="theme-box__icon icon-basic-cup"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Food & Drink</h3>
                 <p class="theme-box__text">
                   Indulge a sweet tooth
@@ -165,7 +163,7 @@
 
           <div class="col-1-of-6">
             <div class="theme-box">
-                <i class="theme-box__icon icon-basic-world"></i>
+                <i class="theme-box__icon icon-basic-book-pencil"></i>
                 <h3 class="tertiary-heading u-margin-bottom-small">Languages</h3>
                 <p class="theme-box__text">
                   Try a new language
@@ -186,7 +184,6 @@
   </main>
 
   <!-- <section class="test-grid">
-
     <div class="row">
       <div class="col-1-of-3">
         Col 1 of 3
@@ -198,7 +195,6 @@
         Col 1 of 3
       </div>
     </div>
-
     <div class="row">
       <div class="col-1-of-3">
         Col 1 of 3
@@ -207,7 +203,6 @@
         Col 2 of 3
       </div>
     </div>
-
     <div class="row">
       <div class="col-1-of-4">
         Col 1 of 4
@@ -222,7 +217,6 @@
         Col 1 of 4
       </div>
     </div>
-
     <div class="row">
       <div class="col-1-of-4">
         Col 1 of 4
@@ -234,7 +228,6 @@
         Col 2 of 4
       </div>
     </div>
-
     <div class="row">
       <div class="col-1-of-4">
         Col 1 of 4
@@ -243,7 +236,6 @@
         Col 3 of 4
       </div>
     </div>
-
   </section> -->
 
 </body>
