--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   Run in a pack
                 </p>
                 <p class="theme-box__text">
-                  Level up in a martial art
+                  Learn a martial art
                 </p>
                 <p class="theme-box__text">
                   Go faster and further
@@ -181,20 +181,51 @@
 
     </section>
 
+    <section class="faves-section">
+      <div class="u-centre-text u-margin-bottom-large">
+        <h2 class="secondary-heading">
+          Most popular right now
+        </h2>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              Jazz workshop in New Orleans
+            </div>
+            <div class="card__side card__side--back">
+              BACK
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              Kathak dance in Chennai
+            </div>
+            <div class="card__side card__side--back">
+              BACK
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              Pastry and cake baking in Vienna
+            </div>
+            <div class="card__side card__side--back">
+              BACK
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <!-- <section class="test-grid">
-    <div class="row">
-      <div class="col-1-of-3">
-        Col 1 of 3
-      </div>
-      <div class="col-1-of-3">
-        Col 1 of 3
-      </div>
-      <div class="col-1-of-3">
-        Col 1 of 3
-      </div>
-    </div>
+
     <div class="row">
       <div class="col-1-of-3">
         Col 1 of 3
