--- a/index.html
+++ b/index.html
@@ -192,7 +192,23 @@
         <div class="col-1-of-3">
           <div class="card">
             <div class="card__side card__side--front">
-              Jazz workshop in New Orleans
+              <div class="card__picture card__picture-1">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span-1">
+                  Jazz in New Orleans
+                </span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>1 - 2 week workshops</li>
+                  <li>Rehearse with a band</li>
+                  <li>Dedicated instruction</li>
+                  <li>Enjoy local concerts</li>
+                  <li>Conclude with a performance</li>
+                </ul>
+              </div>
             </div>
             <div class="card__side card__side--back">
               BACK
@@ -202,7 +218,23 @@
         <div class="col-1-of-3">
           <div class="card">
             <div class="card__side card__side--front">
-              Kathak dance in Chennai
+              <div class="card__picture card__picture-2">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span-2">
+                  Kathak dance in Jaipur
+                </span>
+              </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>5 - 10 day courses</li>
+                    <li>Intro to a classical Indian dance</li>
+                    <li>Experienced teachers</li>
+                    <li>Beginner friendly</li>
+                    <li>Finish with a performance</li>
+                  </ul>
+                </div>
             </div>
             <div class="card__side card__side--back">
               BACK
@@ -212,7 +244,23 @@
         <div class="col-1-of-3">
           <div class="card">
             <div class="card__side card__side--front">
-              Pastry and cake baking in Vienna
+              <div class="card__picture card__picture-3">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span-3">
+                  Pastry & cake baking in Vienna
+                </span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>3 - 5 day courses</li>
+                  <li>Suitable for bakers of all levels</li>
+                  <li>Group sizes range from 2 to 8</li>
+                  <li>Master pastry chefs as instructors</li>
+                  <li>Eat what you make</li>
+                </ul>
+              </div>
             </div>
             <div class="card__side card__side--back">
               BACK
