first story added

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </section>
 
     <section class="faves-section">
-      <div class="u-centre-text u-margin-bottom-large">
+      <div class="u-centre-text u-margin-bottom-medium">
         <h2 class="secondary-heading">
           Most popular right now
         </h2>
@@ -211,7 +211,26 @@
               </div>
             </div>
             <div class="card__side card__side--back">
-              BACK
+              <div class="card__cta">
+                <div class="card__similar">
+                  <h4 class="card__similar--heading">
+                    Similar tours:
+                  </h4>
+                  <div class="card__similar--details">
+                    <ul>
+                      <li>Songwriting retreat in Nashville</li>
+                      <li>Intro to Kora in Bamako, Mali</li>
+                      <li>Intro to Steelpan in Port of Spain, Trinidad</li>
+                      <li>Intro to Marimba in Maputo, Mozambique</li>
+                      <li>Djembe drumming in Conakry, Guinea</li>
+                      <li>Accordian in Valledupar, Colombia</li>
+                      <li>Flamenco guitar in Seville</li>
+                      <li>Darbuka drumming in Istanbul</li>
+                      <a href="#" class="button button--white">Book a music tour</a>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -237,7 +256,25 @@
                 </div>
             </div>
             <div class="card__side card__side--back">
-              BACK
+              <div class="card__cta">
+                <div class="card__similar">
+                  <h4 class="card__similar--heading">
+                    Similar tours:
+                  </h4>
+                  <div class="card__similar--details">
+                    <ul>
+                      <li>Learn Kathak dance in Lucknow or Varanasi</li>
+                      <li>Learn Bharatanatyam dance in Chennai</li>
+                      <li>Salsa in Cali, Colombia</li>
+                      <li>Samba in Rio de Janeiro, Brazil</li>
+                      <li>Tango in Buenos Aires, Argentina</li>
+                      <li>Kizomba and Kuduro in Luanda, Angola</li>
+                      <li>Dance flamenco in Seville</li>
+                      <a href="#" class="button button--white">Book a dance tour</a>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -263,8 +300,56 @@
               </div>
             </div>
             <div class="card__side card__side--back">
-              BACK
+              <div class="card__cta">
+                <div class="card__similar">
+                  <h4 class="card__similar--heading">
+                    Similar tours:
+                  </h4>
+                  <div class="card__similar--details">
+                    <ul>
+                      <li>Learn Georgian cuisine in Batumi</li>
+                      <li>Learn Italian cuisine in Naples</li>
+                      <li>Chocolate making in Belgium or Switzerland</li>
+                      <li>Sushi making in Tokyo</li>
+                      <li>Coffee brewing in Colombia's Coffee Triangle</li>
+                      <li>Beer making in Dublin</li>
+                      <a href="#" class="button button--white">Book a culinary tour</a>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="u-centre-text u-margin-top-large">
+          <a href="#" class="button button--green">Discover all tours</a>
+      </div>
+    </section>
+
+    <section class="stories-section">
+      <div class="u-centre-text u-margin-bottom-large">
+        <h2 class="secondary-heading">
+          From perplexed to expert
+        </h2>
+      </div>
+
+      <div class="row">
+        <div class="story">
+          <figure class="story__shape">
+            <img src="images/writing-v-small.jpg" alt="Person on Stockholm crime writing tour"/>
+          </figure>
+          <div class="story__text">
+            <h3 class="tertiary-heading u-margin-bottom-small">
+              The crime writing workshop in Stockholm inspired me to start my own novel
+            </h3>
+            <p>
+              I have read many crime fiction books based in Scandinavia, and always dreamed of writing my own novel.
+              We learnt techniques to generate ideas, plan a story, for editing and the writing itself. The Nordic setting
+              helped me come up with a concept of my own, which I began writing in Stockholm. I am taking the
+              Oslo and Copenhagen tours for sequels in Norway and Denmark!
+            </p>
           </div>
         </div>
       </div>
