--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@
       <div class="row">
         <div class="story">
           <figure class="story__shape">
-            <img src="images/writing-v-small.jpg" alt="Person on Stockholm crime writing tour"/>
+            <img class="story__image"
+            src="images/writing-v-small.jpg"
+            alt="Person on Stockholm crime writing tour"/>
           </figure>
           <div class="story__text">
             <h3 class="tertiary-heading u-margin-bottom-small">
