second story added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/basic-icon-styles.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="shortcut icon" type="image/png" href="images/travel.png"/>
-  <title>Travel for the Perplexed</title>
+  <title>Tours for the Perplexed</title>
 </head>
 <body>
   <header class="header">
@@ -342,6 +342,7 @@
             src="images/writing-v-small.jpg"
             alt="Person on Stockholm crime writing tour"/>
           </figure>
+
           <div class="story__text">
             <h3 class="tertiary-heading u-margin-bottom-small">
               The crime writing workshop in Stockholm inspired me to start my own novel
@@ -355,6 +356,29 @@
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="story">
+          <figure class="story__shape">
+            <img class="story__image"
+            src="images/rio-carnival-smaller.jpg"
+            alt="Dancers at Rio carnival"/>
+          </figure>
+
+          <div class="story__text">
+            <h3 class="tertiary-heading u-margin-bottom-small">
+              It was on my bucket list to Samba at the Rio carnival - and I did!
+            </h3>
+            <p>
+              My dream of the ultimate party has always been the Rio carnival. I took the plunge to
+              learn how to samba in only place to learn it - Brazil! I came for the week before carnival,
+              joined a week long group crash course and then partied the second week with my new friends
+              and the two million others on the streets of the city. There is nothing like it.
+            </p>
+          </div>
+        </div>
+      </div>
+
     </section>
 
   </main>
