stories section completed

--- a/index.html
+++ b/index.html
@@ -329,8 +329,16 @@
     </section>
 
     <section class="stories-section">
+      <div class="background-video">
+        <video class="background-video__content" autoplay muted loop>
+          <source src="videos/palm-trees.mp4" type="video/mp4">
+          <source src="">
+            Your Browser does not support this video.
+        </video>
+      </div>
+
       <div class="u-centre-text u-margin-bottom-large">
-        <h2 class="secondary-heading">
+        <h2 class="secondary-heading u-margin-top-large">
           From perplexed to expert
         </h2>
       </div>
@@ -377,6 +385,10 @@
             </p>
           </div>
         </div>
+      </div>
+
+      <div class="u-centre-text u-margin-top-medium u-margin-bottom-large">
+          <a href="#" class="button text-button">Read more stories &rarr;</a>
       </div>
 
     </section>
