--- a/index.html
+++ b/index.html
@@ -393,6 +393,48 @@
 
     </section>
 
+    <section class="booking-section">
+        <div class="row">
+          <div class="booking">
+              <div class="booking__form">
+                <form
+                action="#"
+                class="form">
+                  <div class="u-centre-text u-margin-bottom-medium">
+                    <h2 class="secondary-heading">
+                      Book now
+                    </h2>
+                  </div>
+                    <div class="form__details">
+                      <input type="text"
+                      placeholder="Your Name"
+                      class="form__input"
+                      id="name"
+                      required
+                      />
+                      <label
+                      for="name"
+                      class="form__label">Full Name
+                      </label>
+                    </div>
+                    <div class="form__details">
+                      <input type="email"
+                      placeholder="Your Email"
+                      class="form__input"
+                      id="email"
+                      required
+                      />
+                      <label
+                      for="email"
+                      class="form__label">Email address
+                      </label>
+                    </div>
+                </form>
+              </div>
+          </div>
+        </div>
+    </section>
+
   </main>
 
   <!-- <section class="test-grid">
