add radio buttons to booking form

--- a/index.html
+++ b/index.html
@@ -429,6 +429,37 @@
                       class="form__label">Email address
                       </label>
                     </div>
+
+                    <div class="form__details">
+                      <div class="form__radio-buttons">
+                        <input type="radio" class="form__radio-input" id="music"/>
+                        <label for="music" class="form__radio-label">Music tour</label>
+                      </div>
+                      <div class="form__radio-buttons">
+                        <input type="radio" class="form__radio-input" id="music"/>
+                        <label for="music" class="form__radio-label">Music tour</label>
+                      </div>
+                      <div class="form__radio-buttons">
+                        <input type="radio" class="form__radio-input" id="art"/>
+                        <label for="music" class="form__radio-label">Art / literature tour</label>
+                      </div>
+                      <div class="form__radio-buttons">
+                        <input type="radio" class="form__radio-input" id="sports"/>
+                        <label for="music" class="form__radio-label">Sports tour</label>
+                      </div>
+                      <div class="form__radio-buttons">
+                        <input type="radio" class="form__radio-input" id="dance"/>
+                        <label for="music" class="form__radio-label">Dance tour</label>
+                      </div>
+                      <div class="form__radio-buttons">
+                        <input type="radio" class="form__radio-input" id="food"/>
+                        <label for="music" class="form__radio-label">Food / Drink tour</label>
+                      </div>
+                      <div class="form__radio-buttons">
+                        <input type="radio" class="form__radio-input" id="languages"/>
+                        <label for="music" class="form__radio-label">Languages tour</label>
+                      </div>
+                    </div>
                 </form>
               </div>
           </div>
