--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
   <title>Tours for the Perplexed</title>
 </head>
 <body>
+  <div class="navigation">
+    <input type="checkbox"
+    class="navigation__checkbox"
+    id="navigation__toggle"
+    >
+    <label for="navigation_toggle"
+      class="navigation__button">MENU</label>
+    <div class="navigation__background">&nbsp;</div>
+    <nav class="navigation__container">
+      <ul class="navigation__list">
+        <li class="navigation__item"><a href="#" class="navigation__link">About Us</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link">What You Can Learn</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link">Most Popular Right Now</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link">From Perplexed to Expert</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link">Book Now</a></li>
+      </ul>
+    </nav>
+  </div>
   <header class="header">
     <div class="header__logo-container">
       <img src="images/travel.png"
