with animated navigation menu

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     >
     <label for="navigation_toggle"
       class="navigation__button">MENU</label>
-    <div class="navigation__background">&nbsp;</div>
+    <div class="navigation__background"></div>
     <nav class="navigation__container">
       <ul class="navigation__list">
         <li class="navigation__item"><a href="#" class="navigation__link">About Us</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link">What You Can Learn</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link">Most Popular Right Now</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">From Perplexed to Expert</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link">Book Now</a></li>
       </ul>
     </nav>
