--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
   <div class="navigation">
     <input type="checkbox"
     class="navigation__checkbox"
-    id="navigation__toggle"
+    id="navigation_toggle"
     >
     <label for="navigation_toggle"
-      class="navigation__button">MENU</label>
+      class="navigation__button">
+      <span class="navigation__icon">&nbsp;</span>
+    </label>
 
-    <div class="navigation__background"></div>
+    <div class="navigation__background">&nbsp;</div>
 
     <nav class="navigation__container">
       <ul class="navigation__list">
-        <li class="navigation__item"><a href="#" class="navigation__link">About Us</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">What You Can Learn</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Most Popular Right Now</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Book Now</a></li>
+        <li class="navigation__item"><a href="#about" class="navigation__link">About Us</a></li>
+        <li class="navigation__item"><a href="#themes" class="navigation__link">What You Can Learn</a></li>
+        <li class="navigation__item"><a href="#popular" class="navigation__link">Most Popular Right Now</a></li>
+        <li class="navigation__item"><a href="#stories" class="navigation__link">Stories</a></li>
+        <li class="navigation__item"><a href="#booking" class="navigation__link">Book Now</a></li>
       </ul>
     </nav>
   </div>
@@ -47,12 +49,12 @@
             For the Perplexed
         </span>
       </h1>
-      <a href="#" class="button button--white button--animated">Learn through travel</a>
+      <a href="#about" class="button button--white button--animated">Learn through travel</a>
     </div>
   </header>
 
   <main>
-    <section class="about-section">
+    <section class="about-section" id="about">
       <div class="u-centre-text u-margin-bottom-large">
         <h2 class="secondary-heading--green">
           Travel and learn at the same time
@@ -83,7 +85,7 @@
               bridges through cultural exposure and exchange.
             </p>
 
-            <a href="#" class="text-button">
+            <a href="#themes" class="text-button">
               Find out more &rarr;
             </a>
         </div>
@@ -97,7 +99,7 @@
       </div>
     </section>
 
-    <section class="theme-section">
+    <section class="theme-section" id="themes">
 
         <div class="row">
 
@@ -202,7 +204,7 @@
 
     </section>
 
-    <section class="faves-section">
+    <section class="faves-section" id="popular">
       <div class="u-centre-text u-margin-bottom-medium">
         <h2 class="secondary-heading--green">
           Most popular right now
@@ -247,7 +249,7 @@
                       <li>Accordian in Valledupar, Colombia</li>
                       <li>Flamenco guitar in Seville</li>
                       <li>Darbuka drumming in Istanbul</li>
-                      <a href="#" class="button button--white">Book a music tour</a>
+                      <a href="#booking" class="button button--white">Book a music tour</a>
                     </ul>
                   </div>
                 </div>
@@ -291,7 +293,7 @@
                       <li>Tango in Buenos Aires, Argentina</li>
                       <li>Kizomba and Kuduro in Luanda, Angola</li>
                       <li>Dance flamenco in Seville</li>
-                      <a href="#" class="button button--white">Book a dance tour</a>
+                      <a href="#booking" class="button button--white">Book a dance tour</a>
                     </ul>
                   </div>
                 </div>
@@ -334,7 +336,7 @@
                       <li>Sushi making in Tokyo</li>
                       <li>Coffee brewing in Colombia's Coffee Triangle</li>
                       <li>Beer making in Dublin</li>
-                      <a href="#" class="button button--white">Book a culinary tour</a>
+                      <a href="#booking" class="button button--white">Book a culinary tour</a>
                     </ul>
                   </div>
                 </div>
@@ -345,11 +347,11 @@
       </div>
 
       <div class="u-centre-text u-margin-top-large">
-          <a href="#" class="button button--green">Discover all tours</a>
+          <a href="#stories" class="button button--green">Discover tour stories</a>
       </div>
     </section>
 
-    <section class="stories-section">
+    <section class="stories-section" id="stories">
       <div class="background-video">
         <video class="background-video__content" autoplay muted loop>
           <source src="videos/palm-trees.mp4" type="video/mp4">
@@ -408,12 +410,12 @@
       </div>
 
       <div class="u-centre-text u-margin-top-medium u-margin-bottom-large">
-          <a href="#" class="button text-button">Read more stories &rarr;</a>
+          <a href="#booking" class="button text-button">Enquire now &rarr;</a>
       </div>
 
     </section>
 
-    <section class="booking-section">
+    <section class="booking-section" id="booking">
         <div class="row">
           <div class="booking">
               <div class="booking__form">
@@ -547,10 +549,10 @@
           <div class="footer__navigation">
             <ul class="footer__list">
               <li class="footer__item">
-                <a href="#" class="footer__link">About Us</a>
+                <a href="#about" class="footer__link">About Us</a>
               </li>
               <li class="footer__item">
-                <a href="#" class="footer__link">Contact</a>
+                <a href="#booking" class="footer__link">Contact</a>
               </li>
               <li class="footer__item">
                 <a href="#" class="footer__link">Vacancies</a>
@@ -573,50 +575,22 @@
     </div>
   </footer>
 
-  <!-- <section class="test-grid">
-
-    <div class="row">
-      <div class="col-1-of-3">
-        Col 1 of 3
+  <div class="popup" id="popup">
+    <div class="popup__content">
+      <div class="popup__left">
+        <img src="images/djembe-drumming.jpg" alt="Tour photo" class="popup__img">
+        <img src="images/batumi-feast.jpg" alt="Tour photo" class="popup__img">
       </div>
-      <div class="col-2-of-3">
-        Col 2 of 3
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-1-of-4">
-        Col 1 of 4
+      <div class="popup__right">
+        <h2 class="secondary-heading u-margin-bottom-small">Start booking now</h2>
+        <h3 class="tertiary-heading u-margin-bottom-small">Important &ndash; </h3>
+        <p class="popup__text">
+          To be added shortly
+        </p>
+        <a href="#booking" class="button button--green">Book now</a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-2-of-4">
-        Col 2 of 4
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-1-of-4">
-        Col 1 of 4
-      </div>
-      <div class="col-3-of-4">
-        Col 3 of 4
-      </div>
-    </div>
-  </section> -->
+  </div>
 
 </body>
 </html>
