popup completed. site now just needs more responsive design

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                       <li>Accordian in Valledupar, Colombia</li>
                       <li>Flamenco guitar in Seville</li>
                       <li>Darbuka drumming in Istanbul</li>
-                      <a href="#booking" class="button button--white">Book a music tour</a>
+                      <a href="#popup" class="button button--white">Book a music tour</a>
                     </ul>
                   </div>
                 </div>
@@ -293,7 +293,7 @@
                       <li>Tango in Buenos Aires, Argentina</li>
                       <li>Kizomba and Kuduro in Luanda, Angola</li>
                       <li>Dance flamenco in Seville</li>
-                      <a href="#booking" class="button button--white">Book a dance tour</a>
+                      <a href="#popup" class="button button--white">Book a dance tour</a>
                     </ul>
                   </div>
                 </div>
@@ -336,7 +336,7 @@
                       <li>Sushi making in Tokyo</li>
                       <li>Coffee brewing in Colombia's Coffee Triangle</li>
                       <li>Beer making in Dublin</li>
-                      <a href="#booking" class="button button--white">Book a culinary tour</a>
+                      <a href="#popup" class="button button--white">Book a culinary tour</a>
                     </ul>
                   </div>
                 </div>
@@ -582,12 +582,18 @@
         <img src="images/batumi-feast.jpg" alt="Tour photo" class="popup__img">
       </div>
       <div class="popup__right">
-        <h2 class="secondary-heading u-margin-bottom-small">Start booking now</h2>
-        <h3 class="tertiary-heading u-margin-bottom-small">Important &ndash; </h3>
-        <p class="popup__text">
-          To be added shortly
-        </p>
-        <a href="#booking" class="button button--green">Book now</a>
+        <a href="#popular" class="popup__close">&times;</a>
+        <h2 class="secondary-heading u-margin-bottom-small">Prices</h2>
+        <div class="popup__text">
+          <p>All of tours' prices depend on the dates selected and the length of the tour. Tours
+          vary in length from three days to three weeks.</p>
+
+          <p>Optional language supplements are available for tours in Germany and Austria (German),
+          China (Mandarin), Japan (Japanese), Italy (Italian), Colombia, Spain, Argentina (all Spanish),
+          Brazil, Mozambique, Angola (all Portuguese), Morocco (Arabic), Mali and Guinea (both French).</p>
+
+        </div>
+        <a href="#booking" class="button button--green">Enquire now</a>
       </div>
     </div>
   </div>
